- Changed unfired terracotta to be crafted with full blocks instead of 8 piles for convenience.
- Added mud, created by leaving loose dirt underwater.
- Added packed mud, created by piston packing two mud blocks.
- Added mud brick, created with 4 packed mud in a crafting grid, along with associated sub blocks.
- Added new wood types: mahogany, mangrove, hazel
    - For the purposes of smelting and tanning:
        - Mahogany and mangrove are equivalent to jungle
        - Hazel is equivalent to oak
- Changed autumn saplings to produce different wood types depending on color.
- Changed sapling recipes:
    - All sapling recipes can use either dung or fertilizer, and are performed in a cauldron.
    - Cherry saplings require an oak sapling, pink dye, and a fertilizer.
    - Acacia saplings require a birch sapling, orange dye, and a fertilizer.
    - Mahogany saplings require a jungle sapling, red dye, and a fertilizer.
    - Mangrove saplings require a jungle sapling, orange dye, and a fertilizer.
    - Hazel saplings require an oak sapling, brown dye, and a fertilizer.
    - Red autumn saplings require a cherry sapling, red dye, and a fertilizer.
    - Orange autumn saplings require an oak sapling, orange dye, and a fertilizer.
    - Yellow autumn saplings require a birch sapling, yellow dye, and a fertilizer.
- Added calcite - loose calcite cobblestone can be crated by combining loose diorite cobblestone with bonemeal in a crucible
- Changed deco stone variants to behave consistently with BTW stone.
    - Granite, andesite, diorite, and calcite are all considered first strata.
    - Slate is considered third strata.
- Changed how lanterns render, and added item equivalents. The old blocks may be converted into items in a crafting grid.
- Changed lanterns to break when underwater.
- Changed wrought iron bars and paper walls to output more when crafting.